--- a/package.json
+++ b/package.json
@@ -5,20 +5,37 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
+    "date-fns": "^3.6.0",
+    "mongoose": "^8.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nrwl/nest": "^19.6.4",
     "@nx/eslint": "19.6.4",
     "@nx/eslint-plugin": "19.6.4",
     "@nx/jest": "19.6.4",
     "@nx/js": "19.6.4",
+    "@nx/nest": "19.6.4",
+    "@nx/node": "19.6.4",
     "@nx/react": "19.6.4",
     "@nx/vite": "19.6.4",
     "@nx/web": "19.6.4",
+    "@nx/webpack": "19.6.4",
     "@nx/workspace": "19.6.4",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
@@ -45,6 +62,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "19.6.4",
     "prettier": "^2.6.2",
@@ -52,7 +70,8 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
