--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "es2015"],
     "jsx": "react-jsx",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
     "allowJs": false,
     "esModuleInterop": false,
     "resolveJsonModule": true,
