--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "@task-app/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "npx nx run-many --parallel --target=serve --projects=backend,frontend",
+    "dev:front": "npx nx run-many --parallel --target=serve --projects=frontend"
+  },
   "private": true,
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@mui/icons-material": "^6.1.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
@@ -12,10 +18,14 @@
     "@nestjs/platform-express": "^10.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
+    "antd": "^5.21.5",
     "axios": "^1.6.0",
+    "config": "^4.0.0",
     "date-fns": "^3.6.0",
+    "express": "^5.1.0",
     "mongoose": "^8.6.0",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
     "reflect-metadata": "^0.1.13",
@@ -47,6 +57,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "18.3.0",
     "@types/react-is": "18.3.0",
     "@types/styled-components": "5.1.26",
@@ -66,6 +77,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
+    "nodemon": "^3.1.10",
     "nx": "19.6.4",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
